--- a/package.json
+++ b/package.json
@@ -12,12 +12,25 @@
 		"db:push": "drizzle-kit push:mysql --config=drizzle.config.ts"
 	},
 	"dependencies": {
+		"@hookform/resolvers": "^3.3.4",
+		"@radix-ui/react-label": "^2.0.2",
+		"@radix-ui/react-select": "^2.0.0",
+		"@radix-ui/react-slot": "^1.0.2",
+		"@radix-ui/react-tabs": "^1.0.4",
+		"class-variance-authority": "^0.7.0",
+		"clsx": "^2.1.0",
 		"dotenv": "^16.4.5",
 		"drizzle-orm": "^0.30.7",
+		"drizzle-zod": "^0.5.1",
+		"lucide-react": "^0.366.0",
 		"mysql2": "^3.9.3",
 		"next": "14.1.4",
 		"react": "^18",
-		"react-dom": "^18"
+		"react-dom": "^18",
+		"react-hook-form": "^7.51.2",
+		"tailwind-merge": "^2.2.2",
+		"tailwindcss-animate": "^1.0.7",
+		"zod": "^3.22.4"
 	},
 	"devDependencies": {
 		"@types/node": "^20",
