--- a/package.json
+++ b/package.json
@@ -18,11 +18,11 @@
 		"@radix-ui/react-slot": "^1.0.2",
 		"@radix-ui/react-tabs": "^1.0.4",
 		"@radix-ui/react-toast": "^1.1.5",
+		"@tanstack/react-table": "^8.15.3",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.0",
 		"dotenv": "^16.4.5",
 		"drizzle-orm": "^0.30.7",
-		"drizzle-zod": "^0.5.1",
 		"lucide-react": "^0.366.0",
 		"mysql2": "^3.9.3",
 		"next": "14.1.4",
