--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"clsx": "^2.1.0",
 		"dotenv": "^16.4.5",
 		"drizzle-orm": "^0.30.7",
+		"iron-session": "^8.0.1",
 		"lucide-react": "^0.366.0",
 		"mysql2": "^3.9.3",
 		"next": "14.1.4",
