--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,25 +2,18 @@ version: '3.9'
 
 services:
   db:
-    image: mysql
+    image: postgres
     restart: always
     environment:
-      MYSQL_DATABASE: 'db'
-      # So you don't have to use root, but you can if you like
-      MYSQL_USER: 'user'
-      # You can use whatever password you like
-      MYSQL_PASSWORD: 'password'
-      # Password for root access
-      MYSQL_ROOT_PASSWORD: 'password'
+      POSTGRES_DB: 'db'
+      POSTGRES_USER: 'user'
+      POSTGRES_PASSWORD: 'password'
+      PGDATA: /data/postgres
     ports:
-      # <Port exposed> : <MySQL Port running inside container>
-      - '3306:3306'
+      - '5432:5432'
     expose:
-      # Opens port 3306 on the container
-      - '3306'
-      # Where our data will be persisted
+      - 5432
     volumes:
-      - my-db:/var/lib/mysql
-# Names our volume
+      - postgres:/data/postgres
 volumes:
-  my-db:
+  postgres:
