--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
 		"build": "next build",
 		"start": "next start",
 		"lint": "next lint",
-		"migrations:generate": "drizzle-kit generate:mysql --config=drizzle.config.ts",
+		"migrations:generate": "drizzle-kit generate:pg --config=drizzle.config.ts",
 		"migrations:drop": "drizzle-kit drop --config=drizzle.config.ts",
-		"db:push": "drizzle-kit push:mysql --config=drizzle.config.ts"
+		"db:push": "drizzle-kit push:pg --config=drizzle.config.ts"
 	},
 	"dependencies": {
 		"@hookform/resolvers": "^3.3.4",
@@ -28,8 +28,8 @@
 		"drizzle-zod": "^0.5.1",
 		"iron-session": "^8.0.1",
 		"lucide-react": "^0.366.0",
-		"mysql2": "^3.9.3",
 		"next": "14.1.4",
+		"postgres": "^3.4.4",
 		"react": "^18",
 		"react-dom": "^18",
 		"react-hook-form": "^7.51.2",
