--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"@radix-ui/react-tabs": "^1.0.4",
 		"@radix-ui/react-toast": "^1.1.5",
 		"@tanstack/react-table": "^8.15.3",
+		"@vercel/postgres": "^0.8.0",
 		"bcrypt": "^5.1.1",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.0",
